--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 # requirements.txt — dependencias mínimas para usar optimamente el Visualizador Molecular
+# Fija NumPy en la serie 1.x para que RDKit funcione
+numpy<2
 
-Flask>=2.0            # Micro‑framework web
-Flask-SocketIO>=5.0   # WebSocket para Flask
-python-socketio>=5.0  # Cliente/servidor Socket.IO
-python-engineio>=4.0  # Motor interno de Socket.IO
-opencv-python>=4.5    # Captura y procesamiento de video
-mediapipe>=0.8        # Detección de manos y landmarks
-numpy>=1.21           # Álgebra y manipulacion de arrays
-Pillow>=8.0           # Manipulación de imágenes (PIL)
-rdkit-pypi>=2021.9.2  # Química computacional con RDKit
-requests>=2.28        # Cliente HTTP
+Flask>=2.0
+Flask-SocketIO>=5.0
+python-socketio>=5.0
+python-engineio>=4.0
+
+# Requerido para Gunicorn + SocketIO en producción
+eventlet>=0.33.0
+
+opencv-python>=4.5
+mediapipe>=0.8
+Pillow>=8.0
+
+# RDKit debe venir después de la línea numpy<2
+rdkit-pypi>=2021.9.2
+
+requests>=2.28
+
