--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ python-engineio>=4.0
 
 # Requerido para Gunicorn + SocketIO en producción
 eventlet>=0.33.0
+gunicorn>=20.0.0
 
 opencv-python>=4.5
 mediapipe>=0.8
